2004-06-25  Not Zed  <NotZed@Ximian.com>

	** See bug #60354.

	* Evolution-Component.idl: createControls -> createView and
	ComponentView to keep track of things.

	* Evolution-Shell.idl: return a new type ShellView from
	createNewWindow so other parts of the system can access it later.
	ShellView so far just lets you set title or switch component, but
	could be subclassed later.

	* e-shell.c (impl_Shell_createNewWindow): return a shell view.

	* e-shell-window.c (init_view): create the view from the compnent
	first, then get the controls from it separately.
	(init): setup the e-shell-view object for the create view
	thing.

	* e-shell-view.c (e_shell_view_new): simple bonobo object for
	Evolution_ShellView, keep track of the EShellWindow.

	* e-component-view.[ch]: simple bonobo object for
	Evolution_ComponentView.  Just keep track of the controls.

2004-06-24  Not Zed  <NotZed@Ximian.com>

	** See bug #57367.

	* e-shell-window.c (e_shell_window_new): fix gconf client leak and
	clean up some logic.
	
	* e-shell.c (e_shell_construct): dont activate the components
	individually, component registry does that implictly.

	* e-component-registry.c (init): dont call query_components here.
	(query_components): setup a run-once guard.  before adding a
	component info to the list, make sure we can activate it.
	(component_info_new): take the interface as a construct argument
	now.
	(e_component_registry_peek_list): perform the component list query
	if we haven't already.
	(e_component_registry_peek_info): same.
	(e_component_registry_activate): just always return
	the reffed component, it isn't added unless it was already activated.

2004-06-21  Chris Toshok  <toshok@ximian.com>

	* e-user-creatable-items-handler.c (impl_finalize): free
	priv->menu_xml.  plugs (big) leak.

2004-06-18  Jeffrey Stedfast  <fejj@novell.com>

	* main.c (main): Remove AUTOHELP option since GNOME adds this
	itself. Fixes bug #60374.